# Fast-SSIM

./: .gitignore  README.md  benchmark.py  example.py  pyproject.toml
fast_ssim/: __init__.py  _core.py
src/: Testbed.vcxproj  Testbed.vcxproj.filters  linux.txt  main.cpp  ssim.cpp  ssim.h  ssim_avx2.cpp  ssim_dispatch.cpp  ssim_impl.hpp  ssim_sse.cpp  thread_pool.h  vc12.sln  vc12.vcxproj  vc12.vcxproj.filters
