[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Fast-SSIM"
description = "Fast SSIM and PSNR algorithms for Python. Up to 30x speedup for SSIM and up to 10x for PSNR."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["ssim", "psnr", "image quality", "image comparison", "image processing"]
authors = [{name = "Tim Lodemann"}]
dynamic = ["version"]
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/timminator/Fast-SSIM"
documentation = "https://github.com/timminator/Fast-SSIM/blob/master/README.md"
Repository = "https://github.com/timminator/Fast-SSIM.git"
Issues = "https://github.com/timminator/Fast-SSIM/issues"

[tool.setuptools]
packages = ["fast_ssim"]

[tool.setuptools.package-data]
fast_ssim = ["resources/*ssim.*"]

[tool.setuptools.dynamic]
version = {attr = "fast_ssim._core.__version__"}

[tool.ruff]
exclude = ["build", "venv", ".venv", "__pycache__"]
preview = true
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "W"]
ignore = ["E501", "SIM108", "SIM102", "SIM114"]
